# 4ddicted

./: .env  .gitignore  .markdownlintignore  .redscript  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INFO.md  LICENSE  NEXUS.txt  README.md  WIKI.md  book.toml  cli.html  index.html  install.html  issues.md  justfile  manifest.html  mod.html  print.html  rust-toolchain.toml  searchindex.js  searchindex.json  toc.html  toc.js  translations.js  troubleshooting.html  wiki.html
.github/ISSUE_TEMPLATE/: bug_report.md  support_consumable.md
.github/workflows/: pages.yml  quality.yml  release.yml
archive/: Addicted.cpmodproj  install_log.xml  layout.xml
archive/source/: info.json
audioware/: info.json  voices.en-us.yml  voices.es-es.yml  voices.fr-fr.yml  voices.it-it.yml  voices.kr-kr.yml  voices.pt-br.yml  voices.yml  voices.zh-cn.yml
book/: book.toml
book/pages/: SUMMARY.md  install.md  manifest.md  mod.md  wiki.md
cheatsheet/: icons.html  primitives.html  sounds.html  summary.html
mdbook/: issues.md  wiki.md  wip.md
mods/Addicted/: Cron.lua  GameUI.lua  debug.lua  init.lua
pages/: SUMMARY.md  blog.md  cheatsheet.md  cli.md  concept.md  footer.md  handbook.md  info.md  install.md  issues.md  manifest.md  mod.md  notes.md  patterns.md  recipes.md  troubleshooting.md  wiki.md  wip.md
pages/blog/: 2023-01-21.md  (+3 more)
patterns/: blackboards.html  callbacks.html  effectors.html  events.html  listeners.html  scriptables.html  summary.html  systems.html  tasks.html
plugins/addicted/: Cargo.toml
plugins/addicted/reds/: Addiction.reds  Consumption.reds  Cooldown.reds  Damage.reds  Debug.reds  Event.reds  Immunity.reds  Interface.reds  Intoxication.reds  Jauge.reds  Martindale.reds  Natives.reds  Resilience.reds  System.reds  WannabeEdgerunner.reds
plugins/addicted/reds/Addiction/: Board.reds  Hook.reds  Logic.reds
plugins/addicted/reds/Attunement/: Effector.reds  Hook.reds  Logic.reds
plugins/addicted/reds/Consumption/: Logic.reds  Types.reds
plugins/addicted/reds/Equipment/: Hook.reds
plugins/addicted/reds/Martindale/: All.reds  Anabolic.reds  Smoke.reds
plugins/addicted/reds/Resilience/: Hook.reds
plugins/addicted/reds/Types/: Category.reds  Consumable.reds  Kind.reds  Threshold.reds
plugins/addicted/reds/UI/: Hook.reds  Logic.reds
plugins/addicted/reds/VFX/: Hook.reds  Logic.reds
plugins/addicted/reds/Weaken/: Hook.reds
plugins/addicted/src/: addiction.rs  attempt.rs  board.rs  consumption.rs  cyberware.rs  intoxication.rs  lessen.rs  lib.rs  macros.rs  player.rs  symptoms.rs  system.rs
plugins/addicted/src/addictive/: RESEARCH.md  alcohol.rs  booster.rs  healer.rs  mod.rs  neuro.rs
plugins/addicted/src/interop/: consumption.rs  event.rs  jauge.rs  mod.rs  substance.rs  threshold.rs
plugins/addicted/src/interop/substance/: category.rs  id.rs  kind.rs  mod.rs  quality.rs  substance.rs  tier.rs  type.rs
plugins/addicted/src/preventive/: biomonitor.rs  mod.rs
plugins/audioware/: Cargo.toml
plugins/audioware/reds/: Localization.reds  Natives.reds
plugins/audioware/src/: de.rs  hook.rs  interop.rs  lib.rs  plugin.rs  registry.rs  utils.rs
recipes/: TODO  justfile
snippets/: debug.reds  tweak.reds  type.reds
travelog/: 2023-01-21.html  2023-01-22.html  2023-01-24.html  2023-01-25.html  2023-01-27.html  2023-01-29.html  2023-01-30.html  2023-01-31.html  2023-02-03.html  2023-02-04.html  2023-02-06.html  2023-02-07.html  2023-02-10.html  2023-03-17.html  2023-03-31.html  2023-04-07.html  summary.html
tweaks/: addiction.yml  cough.yml  duration.yml  effect.yml  healer.yml  icons.yml  memorybooster.yml  stimulants.yml
(+321 files in other folders)
