[workspace]
members = ["plugins/cp2077-rs", "plugins/stupefied", "plugins/addicted"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

[workspace.dependencies]
cp2077-rs = { path = "./plugins/cp2077-rs" }
red4ext-rs = { git = "https://github.com/jac3km4/red4ext-rs.git", tag = "v0.5.1", features = ["macros"] }
