[workspace]
members = ["plugins/cp2077-rs", "plugins/stupefied", "plugins/addicted"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

[workspace.dependencies]
cp2077-rs = { path = "./plugins/cp2077-rs" }
const-str = "0.5.6"
phf = { version = "0.11.2", features = ["macros"] }
red4ext-rs = { git = "https://github.com/Roms1383/red4ext-rs.git", branch = "feat/tdbid-as-u64", features = ["macros"] }
