[package]
name = "addicted"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "addicted"
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.4.0"
const-str.workspace = true
cp2077-rs.workspace = true
phf.workspace = true
stupefied = { path = "../stupefied" }
red4ext-rs.workspace = true
