[package]
name = "audioware"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "audioware"

[dependencies]
kira = "0.8.4"
lazy_static = "1.4.0"
metadata = "0.1.8"
once_cell = "1.18.0"
red4ext-rs = { git = "https://github.com/jac3km4/red4ext-rs.git", tag = "v0.3.4", features = ["macros"] }

# [dependencies.ffmpeg-next]
# version = "^6.0.0"
# features = ["build"]