[package]
name = "audioware"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "audioware"

[dependencies]
derive_more = "0.99.17"
kira = "0.8.4"
lazy_static = "1.4.0"
red4ext-rs = { git = "https://github.com/jac3km4/red4ext-rs.git", tag = "v0.3.4", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
