[package]
name = "audioware"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "audioware"

[dependencies]
anyhow = "1.0.75"
derive_more = "0.99.17"
either = { version = "1.9.0", features = ["serde"] }
kira = "0.8.4"
lazy_static = "1.4.0"
red4ext-rs = { git = "https://github.com/jac3km4/red4ext-rs.git", tag = "v0.3.4", features = ["macros"] }
retour = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
strum = "0.25.0"
strum_macros = "0.25.2"
widestring = "1.0.2"
winapi = "0.3.9"
